just commiting for test

--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 :root {
-  --purple-color: #5c2dd5;
+  --purple-color: #5626d2;
   --less-purple-color: #7945ff;
   --redish-color: #fd6687;
   --yellowish-color: #ffce67;
